[tool.poetry]
name = "agenda-service"
version = "0.1.0"
description = "An API made with Python FastAPI, Agenda Service"
authors = ["tayamEJ <Tayam0nline@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyjwt = "^2.10.1"
cryptography = "^44.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
