[tool.poetry]
name = "agenda-service"
version = "0.1.0"
description = "An API made with Python FastAPI, Agenda Service"
authors = ["tayamEJ <Tayam0nline@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pyjwt = "^2.10.1"
cryptography = "^44.0.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
prometheus-fastapi-instrumentator = "^6.1.0"
pydantic = "^2.10.0"
starlette = "^0.37.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
